# DRF_project

./: .env  .env.example  Dockerfile  README.md  celerybeat-schedule.db  dump.rdb  groups.json  payments_fixture.json  pyproject.toml  requirements.txt
config/: settings.py  urls.py
courses/: models.py  paginations.py  serializer.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_course_owner.py
lessons/: models.py  paginations.py  serializers.py  tests.py  urls.py  validators.py  views.py
lessons/migrations/: 0001_initial.py  0002_alter_lesson_course.py  0003_lesson_owner.py
payments/: filters.py  models.py  serializers.py  services.py  urls.py  views.py
payments/migrations/: 0001_initial.py  0002_initial.py
subscriptions/: models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
subscriptions/migrations/: 0001_initial.py
users/: filters.py  models.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py  cu.py
users/migrations/: 0001_initial.py  0002_payment.py
